Edit deploy.yml to properly deploy pages
